--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 
 .mhead {
     position: fixed;
+    top: 0;
     left: 0;
     right: 0;
     background: white;
@@ -85,4 +86,7 @@ body {
 }
 .fvg {
     justify-content: center;
+}
+.zx {
+    margin-top: 150px;
 }
