--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ body {
     font-size: 25px;
     margin-bottom: 10px;
 }
+
 /* .zb {
     display: flex;
     flex-direction: row;
@@ -123,39 +124,44 @@ poi {
     flex-direction: row;
     justify-content: center;
 } */
-------------------------------
-/* .box {
-    width: 400px;
-    height: 300px;
-    margin: 10px;
-    float: left;
+.box {
     position: relative;
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+    height: 100%;
+    clear: both;
+    margin: 0 auto;
+    /* list-style: none; */
+    text-align: center;
     overflow: hidden;
-    margin: 10px;
+    float: left;
+    clear: both;
+    
   }
   .box img {
-    width: 400px;
-    height: 300px;
-    position: absolute;
     transition: all 0.5s;
     transform: scale(1.1, 1.1);
+    position: relative;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
   }
   .box:hover img {
     transform: scale(1, 1);
   }
   .box .light {
-    width: 600px;
-    height: 150px;
+    width: 800px;
+    height: 250px;
     background-color: rgba(255, 255, 255, 0.3);
     transition: all 0.5s;
     position: absolute;
-    top: -80px;
+    top: -330px;
     right: -400px;
     transform: rotate(45deg);
   }
   .box:hover .light {
-    top: 190px;
-    right: 270px;
-  } */
+    top: 350px;
+    right: 310px;
+  }
