--- a/css/style.css
+++ b/css/style.css
@@ -165,20 +165,19 @@ poi {
     top: 340px;
     right: 400px;
   }
+  .frosh {
+    width: 98vh;
+    margin: auto;
+  }
   .product {
     justify-content: center;
     text-align: center;
     border-radius: 10px;
     font-size: 14px;
   }
-  .mki {
-    position: relative;
-    border-radius: 10px;
-    overflow: hidden;
-
-  }
   .product img {
     border-radius: 10px;
+    width: 100%;
   }
   .product .badge {
     background-color: #7c2191;
@@ -195,10 +194,10 @@ poi {
   }
   .prices {
     text-align: left;
-    clear: right;
+    clear: both;
     /* float: left; */
   }
-  .product a {
+  .product .aqw a {
     float: left;
     list-style: none;
     text-decoration: none;
@@ -206,6 +205,12 @@ poi {
     color: #949494;
     padding: 5px 15px;
     border-radius: 5px;
+  }
+  .mki {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+
   }
   .product .see {
     width: 100%;
