--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,13 @@ body {
 }
 .mmhover:hover {
     background: #7c2191;
+    color: white;
     border-radius: 0 0 4px 4px;
     height: 100%;
-    color: white;
+    
+}
+.mmhover:hover i {
+    color: #ffffff;
 }
 .mhead i a {
     padding: 0 5px 10px 8px;
@@ -226,4 +230,23 @@ poi {
   .product:hover .see {
     bottom: 0;
     opacity: 1;
+  }
+  .cvbr {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -34px;
+    position: relative;
+    text-align: center;
+  }
+  span {
+    background: none repeat scroll 0 0 #fff;
+    border: 1px solid #e4e5e7;
+    border-radius: 5px;
+    color: #8e44ad;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 6px 32px;
+    position: relative;
+    text-transform: uppercase;
+    z-index: 3;
   }
