--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 body {
     font-family: IRANSansWeb;
     color: #3d3d3d;
-    font-size: 13px;
+    font-size: 14px;
+}
+a {
+  
 }
 .mhead {
     position: fixed;
@@ -263,8 +266,64 @@ body {
     padding: 8px 40px;
     border-radius: 20px;
     transition: all 0.3s;
-
   }
   .allp:hover {
     border-radius: 0;
   }
+  .parallax {
+    background-image: url(../pic/TextBack.jpg);
+    background-color: #18181a;    max-width: 100%;
+    height: 450px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    top: 0;
+    color: #e4e5e7;
+    overflow: hidden;
+    
+  }
+  .parallax .pas {
+    background-color: hsla(0, 0%, 0%, 0.575);
+  }
+  .parallax img {
+    flex: auto;
+    justify-content: center;
+    margin: 100px 0 20px 0;
+    width: 400px;
+  }
+  .parallax button {
+    margin-bottom: 400px;
+  }
+  footer {
+    background-color: #18181a;
+    color: #d1d1d1;
+  }
+.rfv a {
+  display: block;
+  color: #949494;
+  text-decoration: none;
+
+}
+.rfv a:hover {
+  transition: all 0.3s;
+  margin-right: 10px;
+}
+.rfvb {
+  margin-top: -10px;
+}
+.rfvb img {
+  opacity: 50%;
+  transition: all 0.3s;
+  width: 90%;
+
+}
+.rfvb img:hover {
+  opacity: 100%;
+}
+.lqe {
+  background-color: #0c0c0c;
+  text-align: center;
+  padding: 20px;
+}
