--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ body {
   bottom: -105px;
   right: -80px;
   text-decoration: none;
-  color: #d1d1d1;
+  color: #fcfcfc;
   rotate: 90deg;
   background-color: #7c2191;
   padding: 15px 60px;
