--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     color: #3d3d3d;
     font-size: 14px;
 }
+a {
+  text-decoration: none !important;
+  list-style: none;
+}
 .mhead {
     position: fixed;
     top: 0;
@@ -24,22 +28,22 @@ body {
     padding: 0;
 }
 .mhead ul li {
-    list-style: none;
-    margin: 0;
+    /* list-style: none; */
+    /* margin: 0; */
     display: inline-block;
 }
 .mhead a {
     color: #444444;
     padding: 0 5px 10px 8px;
-    text-decoration: none !important;
-    list-style: none;
+    /* text-decoration: none !important;
+    list-style: none; */
     display: block;
     width: 100%;
     height: 100%;
 }
 .mmhover:hover {
     background: #7c2191;
-    color: white;
+    /* color: white; */
     border-radius: 0 0 4px 4px;
     height: 100%;
 }
@@ -48,8 +52,8 @@ body {
 }
 .mhead i a {
     padding: 0 5px 10px 8px;
-    text-decoration: none !important;
-    list-style: none;
+    /* text-decoration: none !important; */
+    /* list-style: none; */
 }
 .mhead i {
     font-size: 15px;
@@ -98,7 +102,7 @@ body {
     color: #7c2191;
 }
 .zv a {
-    text-decoration: none;
+    /* text-decoration: none; */
     color: #7c2191;
     display: block;
 }
@@ -110,11 +114,10 @@ body {
     position: relative;
     cursor: pointer;
     width: 100%;
-    height: auto;
+    /* height: auto; */
     height: 100%;
-    clear: both;
-    margin: 0 auto;
-    text-align: center;
+    /* margin: 0 auto; */
+    /* text-align: center; */
     overflow: hidden;
     float: left;
     clear: both;
@@ -125,8 +128,8 @@ body {
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
   }
   .box:hover img {
     transform: scale(1, 1);
@@ -145,12 +148,12 @@ body {
     top: 340px;
     right: 400px;
   }
-  .frosh {
-    width: 98vh;
+  /* .frosh {
+    width: 40vh;
     margin: auto;
-  }
+  } */
   .product {
-    justify-content: center;
+    /* justify-content: center; */
     text-align: center;
     border-radius: 10px;
     font-size: 14px;
@@ -166,11 +169,11 @@ body {
     border-radius: 30px;
   }
   .price{
-    float: left;
+    /* float: left; */
     justify-self: center;
-    clear: right;
+    /* clear: right; */
     padding: 5px;
-    margin-left: 5px;
+    /* margin-left: 5px; */
   }
   .prices {
     text-align: left;
@@ -178,8 +181,8 @@ body {
   }
   .product .aqw a {
     float: left;
-    list-style: none;
-    text-decoration: none;
+    /* list-style: none; */
+    /* text-decoration: none; */
     background-color: #d1d1d1;
     color: #949494;
     padding: 5px 15px;
@@ -197,39 +200,39 @@ body {
     transition: all 0.5s;
     position: absolute;
     bottom: -80px;
-    left: 0;
-    opacity: 0;
+    /* left: 0; */
+    /* opacity: 0; */
     padding: 10px;
   }
   .product:hover .see {
     bottom: -5px;
-    opacity: 1;
+    /* opacity: 1; */
   }
   .cvbr {
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     margin-top: -34px;
     position: relative;
     z-index: 2;
     text-align: center;
   }
   .uybh {
-    background: none repeat scroll 0 0 #fff;
+    background-color: #fff;
     border: 1px solid #e4e5e7;
     border-radius: 5px;
     color: #8e44ad;
     font-size: 18px;
     font-weight: bold;
     padding: 6px 32px;
-    position: relative;
-    text-transform: uppercase;
+    /* position: relative; */
+    /* text-transform: uppercase; */
     z-index: 3;
   }
   .price2 {
     text-align: right;
   }
   .product a {
-    text-decoration: none;
+    /* text-decoration: none; */
     color: #5a5a5a;
   }
   .badg {
@@ -244,8 +247,8 @@ body {
     padding: 0 20px;
   }
   .allp {
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     margin-top: 12px;
     position: relative;
     z-index: 2;
@@ -259,28 +262,28 @@ body {
     transition: all 0.3s;
   }
   .allp:hover {
-    border-radius: 0;
+    border-radius: 4px;
   }
   .parallax {
     background-image: url(../pic/TextBack.jpg);
-    background-color: #18181a;    
-    max-width: 100%;
+    /* background-color: #18181a;     */
+    /* max-width: 100%; */
     height: 450px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
-    top: 0;
+    /* top: 0; */
     color: #e4e5e7;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   .parallax .pas {
     background-color: hsla(0, 0%, 0%, 0.575);
   }
   .parallax img {
     flex: auto;
-    justify-content: center;
+    /* justify-content: center; */
     margin: 100px 0 20px 0;
     width: 400px;
   }
@@ -294,7 +297,7 @@ body {
 .rfv a {
   display: block;
   color: #949494;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 .rfv a:hover {
   transition: all 0.3s;
@@ -324,7 +327,7 @@ body {
   position: fixed;
   bottom: -105px;
   right: -80px;
-  text-decoration: none;
+  /* text-decoration: none; */
   color: #fcfcfc;
   rotate: 90deg;
   background-color: #7c2191;
